--- a/styles.css
+++ b/styles.css
@@ -17,4 +17,57 @@ body {
   font-weight: 400;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 20rem;
+}
+
+.calculator {
+  min-width: 320px;
+  width: 35rem;
+  margin: 0 auto;
+  background-color: #0b090a;
+  border-radius: 0.5rem;
+}
+.calculator .screen {
+  text-align: right;
+  padding: 3rem;
+  color: #f5f3f4;
+  font-size: 2.5rem;
+  font-weight: 500;
+}
+.calculator .keys-row {
+  display: flex;
+  justify-content: space-around;
+}
+.calculator .keys .key {
+  font-family: inherit;
+  width: 25%;
+  padding: 3rem;
+  font-size: 2rem;
+  border: 1px solid #0b090a;
+  border-radius: 0.5rem;
+  background-color: #dee2e6;
+  cursor: pointer;
+}
+.calculator .keys .key:hover {
+  background-color: #ced4da;
+}
+.calculator .keys .operator {
+  background-color: #fb8b24;
+}
+.calculator .keys .operator:hover {
+  background-color: #e87104;
+}
+.calculator .keys .gray {
+  background-color: #adb5bd;
+}
+.calculator .keys .gray:hover {
+  background-color: #6c757d;
+}
+.calculator .keys .double {
+  width: 50%;
+}
+
 /*# sourceMappingURL=styles.css.map */
